# x402-developer-skills

./: .gitignore  .npmignore  README.md  SKILLS.md  package-lock.json  package.json  skills.json
cli/: index.js
docs/: PROTOCOL-ALIGNMENT-AUDIT-REPORT.md  canonical-hashing-test.md  integration-guide.md  protocol-summary.md
examples/go/client/: .npmignore  go.mod  main.go
examples/go/discovery/: main.go
examples/go/middleware/: .npmignore  go.mod  main.go
examples/node/: discovery.js
examples/node/client/: index.ts  package.json
examples/node/middleware/: index.ts  package.json  tsconfig.json
examples/python/: discovery.py
examples/python/client/: main.py
examples/python/gateway/: main.py
examples/rust/: .npmignore
examples/rust/client/: Cargo.toml
examples/rust/client/src/: main.rs
examples/rust/middleware/: Cargo.toml
skills/client/: build-x402-client.md  call-x402-api.md  construct-payment-transaction.md
skills/client/construct-payment-transaction/: SKILL.md
skills/infrastructure/: run-delegator.md  run-x402-gateway.md
skills/protocol/: architecture-overview.md  deterministic-binding.md  explain-x402-protocol.md  protocol-flow.md  replay-protection.md
skills/security/: detect-double-spend.md  enforce-request-binding.md  validate-proof.md
skills/server/: add-x402-to-http-api.md  implement-gateway.md  verify-payment-proof.md
templates/client-template/: .env.example  README.md  package.json
templates/gateway-template/: .env.example  .npmignore  Dockerfile  README.md  docker-compose.yml  go.mod  main.go  middleware.go
(+9 files in other folders)
