[package]
name = "x402-client-example"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2"
